--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,11 @@
 		}
 	},
 	"permissions": ["tabs", "activeTab", "scripting", "storage", "ai"],
-	"host_permissions": ["<all_urls>"]
+	"host_permissions": ["<all_urls>"],
+	"web_accessible_resources": [
+		{
+			"resources": ["webpage-generator.html", "webpage-generator.js"],
+			"matches": ["<all_urls>"]
+		}
+	]
 }
